# rs-embedded

./: .gitignore  README.md
stm32/embassy/rs-embedded-embassy-stm32f3-discovery/: Cargo.toml  README.md
stm32/embassy/rs-embedded-embassy-stm32f3-discovery/.cargo/: config.toml
stm32/embassy/rs-embedded-embassy-stm32h743zi2-nucleo/: Cargo.toml
