[package]
name = "rs-embedded-embassy-stm32f3-discovery"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# Change stm32f303vc to your chip name.
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "stm32f303vc",
    "unstable-pac",
    "memory-x",
    "time-driver-any",
    "exti",
] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.6.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.2", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-usb = { version = "0.3.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
embedded-storage = "0.3.1"
static_cell = "2"
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
] }

[profile.release]
debug = 2
